--- a/app/views/create-account/account-details.html
+++ b/app/views/create-account/account-details.html
@@ -153,8 +153,8 @@
 
       <!-- OFFENCE DETAILS -->
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
-        <div class="govuk-task-list__name-and-hint" data-module="edge">
-          <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="#" data-message="Not started yet" aria-describedby="offence-details-status">
+        <div class="govuk-task-list__name-and-hint" >
+          <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state"  href="./offence-imposition/offence-1/add-offence-1.html" aria-describedby="offence-details-status">
             Offence details
           </a>
         </div>
@@ -262,8 +262,8 @@
 
       <!-- OFFENCE DETAILS -->
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
-        <div class="govuk-task-list__name-and-hint" data-module="edge">
-          <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="#" data-message="Not started yet" aria-describedby="offence-details-status">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state"  href="./offence-imposition/add-offence-1.html" aria-describedby="offence-details-status">
             Offence details
           </a>
         </div>
@@ -340,8 +340,8 @@
 
       <!-- OFFENCE DETAILS -->
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
-        <div class="govuk-task-list__name-and-hint" data-module="edge">
-          <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="#" data-message="Not started yet" aria-describedby="offence-details-status">
+        <div class="govuk-task-list__name-and-hint">
+          <a class="govuk-link govuk-task-list__link govuk-link--no-visited-state" href="./offence-imposition/add-offence-1.html" aria-describedby="offence-details-status">
             Offence details
           </a>
         </div>
